Add baseline reg results

--- a/notebooks/04-baseline-models.ipynb
+++ b/notebooks/04-baseline-models.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -394,6 +394,7 @@
        "      <th>year</th>\n",
        "      <th>round</th>\n",
        "      <th>positionOrder</th>\n",
+       "      <th>predictedOrder</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -403,6 +404,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
+       "      <td>10.591203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -410,6 +412,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>9</td>\n",
+       "      <td>11.766468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -417,6 +420,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>12</td>\n",
+       "      <td>4.714879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -424,6 +428,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>11</td>\n",
+       "      <td>10.003571</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -431,6 +436,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>4</td>\n",
+       "      <td>7.065408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -438,6 +444,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>19</td>\n",
+       "      <td>11.178835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -445,6 +452,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>3</td>\n",
+       "      <td>5.302511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -452,6 +460,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>6</td>\n",
+       "      <td>6.477776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -459,6 +468,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>2</td>\n",
+       "      <td>5.890143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -466,6 +476,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>8</td>\n",
+       "      <td>9.415938</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -473,6 +484,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>14</td>\n",
+       "      <td>12.354100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -480,6 +492,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>20</td>\n",
+       "      <td>12.941733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -487,6 +500,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>7</td>\n",
+       "      <td>8.828306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -494,6 +508,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>5</td>\n",
+       "      <td>8.240673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -501,6 +516,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>10</td>\n",
+       "      <td>7.653041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -508,6 +524,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>13</td>\n",
+       "      <td>14.704630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -515,6 +532,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>16</td>\n",
+       "      <td>14.116998</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -522,6 +540,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>15</td>\n",
+       "      <td>13.529365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -529,6 +548,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>18</td>\n",
+       "      <td>15.292262</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -536,36 +556,37 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>17</td>\n",
+       "      <td>15.879895</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    gridStart  year  round  positionOrder\n",
-       "0          10  2021     19              1\n",
-       "1          12  2021     19              9\n",
-       "2           0  2021     19             12\n",
-       "3           9  2021     19             11\n",
-       "4           4  2021     19              4\n",
-       "5          11  2021     19             19\n",
-       "6           1  2021     19              3\n",
-       "7           3  2021     19              6\n",
-       "8           2  2021     19              2\n",
-       "9           8  2021     19              8\n",
-       "10         13  2021     19             14\n",
-       "11         14  2021     19             20\n",
-       "12          7  2021     19              7\n",
-       "13          6  2021     19              5\n",
-       "14          5  2021     19             10\n",
-       "15         17  2021     19             13\n",
-       "16         16  2021     19             16\n",
-       "17         15  2021     19             15\n",
-       "18         18  2021     19             18\n",
-       "19         19  2021     19             17"
+       "    gridStart  year  round  positionOrder  predictedOrder\n",
+       "0          10  2021     19              1       10.591203\n",
+       "1          12  2021     19              9       11.766468\n",
+       "2           0  2021     19             12        4.714879\n",
+       "3           9  2021     19             11       10.003571\n",
+       "4           4  2021     19              4        7.065408\n",
+       "5          11  2021     19             19       11.178835\n",
+       "6           1  2021     19              3        5.302511\n",
+       "7           3  2021     19              6        6.477776\n",
+       "8           2  2021     19              2        5.890143\n",
+       "9           8  2021     19              8        9.415938\n",
+       "10         13  2021     19             14       12.354100\n",
+       "11         14  2021     19             20       12.941733\n",
+       "12          7  2021     19              7        8.828306\n",
+       "13          6  2021     19              5        8.240673\n",
+       "14          5  2021     19             10        7.653041\n",
+       "15         17  2021     19             13       14.704630\n",
+       "16         16  2021     19             16       14.116998\n",
+       "17         15  2021     19             15       13.529365\n",
+       "18         18  2021     19             18       15.292262\n",
+       "19         19  2021     19             17       15.879895"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
