--- a/notebooks/03-feature-processing.ipynb
+++ b/notebooks/03-feature-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,31 +67,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['constructorStandingsPoints'] = df.groupby(['driverId'])['constructorStandingsPoints'].transform(lambda x: x.ffill())\n",
-    "df['constructorStandingsPosition'] = df.groupby(['driverId'])['constructorStandingsPosition'].transform(lambda x: x.ffill())\n",
-    "df['constructorStandingsWins'] = df.groupby(['driverId'])['constructorStandingsWins'].transform(lambda x: x.ffill())"
+    "df['constructorStandingsPoints'] = df.groupby(['constructorId'])['constructorStandingsPoints'].transform(lambda x: x.ffill())\n",
+    "df['constructorStandingsPosition'] = df.groupby(['constructorId'])['constructorStandingsPosition'].transform(lambda x: x.ffill())\n",
+    "df['constructorStandingsWins'] = df.groupby(['constructorId'])['constructorStandingsWins'].transform(lambda x: x.ffill())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Drop useless columns**"
+    "**Drop unwanted columns**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = df.drop(['resultId','raceId','constructorId','position','positionText','pointsGained',\n",
-    "# 'laps','time_x','milliseconds','fastestLapSpeed','fastestLapTime','fastestLap','statusId'\n",
-    "# ,'circuitName','date','dateOfDebut','status','driverStandingsId'], 1)"
+    "df = df.drop(['driverRef','resultId','raceId','rank','constructorId','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n",
+    "'laps','nationality','time_x','milliseconds','fastestLapSpeed','fastestLapTime','fastestLap','statusId'\n",
+    ",'circuitName','date','dateOfDebut','status','driverStandingsId'], 1)"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
      "output_type": "stream",
      "text": [
       "Columns with null values:\n",
-      " ['driverStandingsId', 'lastRaceRank', 'constructorStandingsId', 'constructorStandingsPoints', 'constructorStandingsPosition', 'constructorStandingsWins', 'previousRaceGridStart', 'previousRacePosition', 'racesWon', 'racesRetired', 'racesFinished', 'polePositions', 'racesWonByConstructor', 'racesRetiredByConstructor', 'percentageOfBestQuali']\n"
+      " ['lastRaceRank', 'constructorStandingsPoints', 'constructorStandingsPosition', 'constructorStandingsWins', 'previousRaceGridStart', 'previousRacePosition', 'racesWon', 'racesRetired', 'racesFinished', 'polePositions', 'racesWonByConstructor', 'racesRetiredByConstructor', 'percentageOfBestQuali']\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,12 +140,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Replace missing percentage of best qualifying time**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df['percentageOfBestQuali'] = df.groupby(['driverId','year'])['percentageOfBestQuali'].transform(lambda x: x.fillna(x.mean()))\n",
+    "df['percentageOfBestQuali'] = df.groupby(['driverId','year'])['percentageOfBestQuali'].transform(lambda x: x.ffill())\n",
+    "df['percentageOfBestQuali'] = df.groupby(['year','round'])['percentageOfBestQuali'].transform(lambda x: x.fillna(x.mean()))\n",
+    "df['percentageOfBestQuali'] = df.groupby(['year','round'])['percentageOfBestQuali'].transform(lambda x: x.fillna(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Chech which columns still have missing values**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -153,29 +172,354 @@
      "output_type": "stream",
      "text": [
       "Columns with null values:\n",
-      " ['driverStandingsId', 'constructorStandingsId', 'constructorStandingsPoints', 'constructorStandingsPosition', 'constructorStandingsWins', 'percentageOfBestQuali']\n"
+      " ['constructorStandingsPoints', 'constructorStandingsPosition', 'constructorStandingsWins']\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>driverId</th>\n",
+       "      <th>gridStart</th>\n",
+       "      <th>positionOrder</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>circuitId</th>\n",
+       "      <th>ageAtRace</th>\n",
+       "      <th>ageAtDebut</th>\n",
+       "      <th>yearsExperience</th>\n",
+       "      <th>racingAtHome</th>\n",
+       "      <th>...</th>\n",
+       "      <th>constructorStandingsWins</th>\n",
+       "      <th>previousRaceGridStart</th>\n",
+       "      <th>previousRacePosition</th>\n",
+       "      <th>racesWon</th>\n",
+       "      <th>racesRetired</th>\n",
+       "      <th>racesFinished</th>\n",
+       "      <th>polePositions</th>\n",
+       "      <th>racesWonByConstructor</th>\n",
+       "      <th>racesRetiredByConstructor</th>\n",
+       "      <th>percentageOfBestQuali</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21179</th>\n",
+       "      <td>529</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21180</th>\n",
+       "      <td>529</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22445</th>\n",
+       "      <td>697</td>\n",
+       "      <td>23</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>47</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21988</th>\n",
+       "      <td>633</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>9</td>\n",
+       "      <td>67</td>\n",
+       "      <td>45</td>\n",
+       "      <td>41</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22146</th>\n",
+       "      <td>647</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1954</td>\n",
+       "      <td>9</td>\n",
+       "      <td>67</td>\n",
+       "      <td>36</td>\n",
+       "      <td>31</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20242</th>\n",
+       "      <td>427</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>5</td>\n",
+       "      <td>55</td>\n",
+       "      <td>38</td>\n",
+       "      <td>32</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       driverId  gridStart  positionOrder  year  round  circuitId  ageAtRace  \\\n",
+       "21179       529          9              5  1950      3         19         33   \n",
+       "21180       529          9              5  1950      3         19         33   \n",
+       "22445       697         23             27  1950      7         14         47   \n",
+       "21988       633          5             20  1954      9         67         45   \n",
+       "22146       647          1             19  1954      9         67         36   \n",
+       "20242       427         18             17  1956      5         55         38   \n",
+       "\n",
+       "       ageAtDebut  yearsExperience  racingAtHome  ...  \\\n",
+       "21179          33                0         False  ...   \n",
+       "21180          33                0         False  ...   \n",
+       "22445          47                0          True  ...   \n",
+       "21988          41                4         False  ...   \n",
+       "22146          31                4         False  ...   \n",
+       "20242          32                6          True  ...   \n",
+       "\n",
+       "       constructorStandingsWins  previousRaceGridStart  previousRacePosition  \\\n",
+       "21179                       NaN                    8.0                  31.0   \n",
+       "21180                       NaN                    8.0                  31.0   \n",
+       "22445                       NaN                   10.0                  10.0   \n",
+       "21988                       NaN                    6.0                  13.0   \n",
+       "22146                       NaN                    2.0                  12.0   \n",
+       "20242                       NaN                    7.0                  10.0   \n",
+       "\n",
+       "      racesWon  racesRetired  racesFinished  polePositions  \\\n",
+       "21179      0.0           0.0            0.0            0.0   \n",
+       "21180      0.0           0.0            0.0            0.0   \n",
+       "22445      0.0           1.0            0.0            0.0   \n",
+       "21988      0.0           9.0            6.0            1.0   \n",
+       "22146     13.0          11.0           17.0           13.0   \n",
+       "20242      1.0          21.0            4.0            1.0   \n",
+       "\n",
+       "       racesWonByConstructor  racesRetiredByConstructor  percentageOfBestQuali  \n",
+       "21179                    0.0                        0.0                  100.0  \n",
+       "21180                    0.0                        0.0                  100.0  \n",
+       "22445                    0.0                        0.0                  100.0  \n",
+       "21988                    0.0                        0.0                  100.0  \n",
+       "22146                    0.0                        0.0                  100.0  \n",
+       "20242                    0.0                        0.0                  100.0  \n",
+       "\n",
+       "[6 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print('Columns with null values:\\n', df.columns[df.isna().any()].tolist())"
+    "print('Columns with null values:\\n', df.columns[df.isna().any()].tolist())\n",
+    "df[df.isnull().any(axis=1)].head(20)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**(Should be mean of the current year up until that point only!!!)**"
+    "Only 6 rows have missing constructor standings information now, all of which are from 1956 or before."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fill missing rank (ordering of drivers by previous race fastest lap during race) values with 0**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df['percentageOfBestQuali'] = df.groupby(['driverId','year'])['percentageOfBestQuali'].transform(lambda x: x.fillna(x.mean()))\n",
-    "df['percentageOfBestQuali'] = df.groupby(['driverId','year'])['percentageOfBestQuali'].transform(lambda x: x.ffill())"
+    "df['lastRaceRank'] = df['lastRaceRank'].replace({'\\\\N': 0})\n",
+    "df['lastRaceRank'] = df['lastRaceRank'].astype(str).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Replace grid starting position 0 (pit lane start) with the last starting position of that race +1**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['gridStart'] = df.groupby(['year','round'])['gridStart'].transform(lambda x: x.replace(to_replace = 0, value = x.max()+1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 25593 entries, 21554 to 25571\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   driverId                      25593 non-null  int64  \n",
+      " 1   gridStart                     25593 non-null  int64  \n",
+      " 2   positionOrder                 25593 non-null  int64  \n",
+      " 3   year                          25593 non-null  int64  \n",
+      " 4   round                         25593 non-null  int64  \n",
+      " 5   circuitId                     25593 non-null  int64  \n",
+      " 6   ageAtRace                     25593 non-null  int64  \n",
+      " 7   ageAtDebut                    25593 non-null  int64  \n",
+      " 8   yearsExperience               25593 non-null  int64  \n",
+      " 9   racingAtHome                  25593 non-null  bool   \n",
+      " 10  driverStandingsPoints         25593 non-null  float64\n",
+      " 11  driverStandingsPosition       25593 non-null  float64\n",
+      " 12  driverStandingsWins           25593 non-null  float64\n",
+      " 13  lastRaceRank                  25593 non-null  int64  \n",
+      " 14  constructorStandingsPoints    25587 non-null  float64\n",
+      " 15  constructorStandingsPosition  25587 non-null  float64\n",
+      " 16  constructorStandingsWins      25587 non-null  float64\n",
+      " 17  previousRaceGridStart         25593 non-null  float64\n",
+      " 18  previousRacePosition          25593 non-null  float64\n",
+      " 19  racesWon                      25593 non-null  float64\n",
+      " 20  racesRetired                  25593 non-null  float64\n",
+      " 21  racesFinished                 25593 non-null  float64\n",
+      " 22  polePositions                 25593 non-null  float64\n",
+      " 23  racesWonByConstructor         25593 non-null  float64\n",
+      " 24  racesRetiredByConstructor     25593 non-null  float64\n",
+      " 25  percentageOfBestQuali         25593 non-null  float64\n",
+      "dtypes: bool(1), float64(15), int64(10)\n",
+      "memory usage: 5.1 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.reset_index(drop=True)\n",
+    "df.to_csv('../data/processed/0.3-feature-processing.csv')"
    ]
   }
  ],
