--- a/notebooks/04-baseline-models.ipynb
+++ b/notebooks/04-baseline-models.ipynb
@@ -2,11 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression"
    ]
   },
@@ -16,8 +21,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all = pd.read_csv('../data/processed/0.1-initial-exploration.csv',index_col=False)\n",
-    "df_date_filtered = df_all[df_all['year'] > 2005]"
+    "df_all = pd.read_csv('../data/processed/0.3-feature-processing.csv', index_col=0)\n",
+    "df = df_all[df_all['year'] > 1980]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Group by race (year,round)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups_year = df.groupby(['year','round']).groups\n",
+    "groups_year = OrderedDict(groups_year)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Define train/test splits based on year and round of the race**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "655"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(groups_year.keys()).index((2019,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_groups = [value for (_, value) in sorted(groups_year.items())] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "715"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sorted_groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = 'undefined'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['driverId', 'gridStart', 'positionOrder', 'year', 'round', 'circuitId',\n",
+       "       'ageAtRace', 'ageAtDebut', 'yearsExperience', 'racingAtHome',\n",
+       "       'driverStandingsPoints', 'driverStandingsPosition',\n",
+       "       'driverStandingsWins', 'lastRaceRank', 'constructorStandingsPoints',\n",
+       "       'constructorStandingsPosition', 'constructorStandingsWins',\n",
+       "       'previousRaceGridStart', 'previousRacePosition', 'racesWon',\n",
+       "       'racesRetired', 'racesFinished', 'polePositions',\n",
+       "       'racesWonByConstructor', 'racesRetiredByConstructor',\n",
+       "       'percentageOfBestQuali'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_hot_columns = ['driverId','circuitId']"
    ]
   },
   {
@@ -26,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df_date_filtered[['gridStart','year','round','positionOrder']]"
+    "df = df[['gridStart','year','round','positionOrder']]"
    ]
   },
   {
@@ -121,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "0.34854908299384657"
+       "0.028457020490752383"
       ]
      },
      "execution_count": 6,
@@ -136,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +319,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.591203</td>\n",
+       "      <td>12.690997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -202,7 +327,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>9</td>\n",
-       "      <td>11.766468</td>\n",
+       "      <td>13.056627</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -210,7 +335,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>12</td>\n",
-       "      <td>4.714879</td>\n",
+       "      <td>10.862848</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -218,7 +343,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>11</td>\n",
-       "      <td>10.003571</td>\n",
+       "      <td>12.508183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -226,7 +351,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>4</td>\n",
-       "      <td>7.065408</td>\n",
+       "      <td>11.594108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -234,7 +359,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>19</td>\n",
-       "      <td>11.178835</td>\n",
+       "      <td>12.873812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -242,7 +367,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>3</td>\n",
-       "      <td>5.302511</td>\n",
+       "      <td>11.045663</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -250,7 +375,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>6</td>\n",
-       "      <td>6.477776</td>\n",
+       "      <td>11.411293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -258,7 +383,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>2</td>\n",
-       "      <td>5.890143</td>\n",
+       "      <td>11.228478</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -266,7 +391,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>8</td>\n",
-       "      <td>9.415938</td>\n",
+       "      <td>12.325368</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -274,7 +399,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>14</td>\n",
-       "      <td>12.354100</td>\n",
+       "      <td>13.239442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -282,7 +407,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>20</td>\n",
-       "      <td>12.941733</td>\n",
+       "      <td>13.422257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -290,7 +415,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>7</td>\n",
-       "      <td>8.828306</td>\n",
+       "      <td>12.142553</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -298,7 +423,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>5</td>\n",
-       "      <td>8.240673</td>\n",
+       "      <td>11.959738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -306,7 +431,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>10</td>\n",
-       "      <td>7.653041</td>\n",
+       "      <td>11.776923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -314,7 +439,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>13</td>\n",
-       "      <td>14.704630</td>\n",
+       "      <td>13.970702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -322,7 +447,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>16</td>\n",
-       "      <td>14.116998</td>\n",
+       "      <td>13.787887</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -330,7 +455,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>15</td>\n",
-       "      <td>13.529365</td>\n",
+       "      <td>13.605072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -338,7 +463,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>18</td>\n",
-       "      <td>15.292262</td>\n",
+       "      <td>14.153517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -346,7 +471,7 @@
        "      <td>2021</td>\n",
        "      <td>19</td>\n",
        "      <td>17</td>\n",
-       "      <td>15.879895</td>\n",
+       "      <td>14.336331</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -354,29 +479,29 @@
       ],
       "text/plain": [
        "    gridStart  year  round  positionOrder  predictedOrder\n",
-       "0          10  2021     19              1       10.591203\n",
-       "1          12  2021     19              9       11.766468\n",
-       "2           0  2021     19             12        4.714879\n",
-       "3           9  2021     19             11       10.003571\n",
-       "4           4  2021     19              4        7.065408\n",
-       "5          11  2021     19             19       11.178835\n",
-       "6           1  2021     19              3        5.302511\n",
-       "7           3  2021     19              6        6.477776\n",
-       "8           2  2021     19              2        5.890143\n",
-       "9           8  2021     19              8        9.415938\n",
-       "10         13  2021     19             14       12.354100\n",
-       "11         14  2021     19             20       12.941733\n",
-       "12          7  2021     19              7        8.828306\n",
-       "13          6  2021     19              5        8.240673\n",
-       "14          5  2021     19             10        7.653041\n",
-       "15         17  2021     19             13       14.704630\n",
-       "16         16  2021     19             16       14.116998\n",
-       "17         15  2021     19             15       13.529365\n",
-       "18         18  2021     19             18       15.292262\n",
-       "19         19  2021     19             17       15.879895"
+       "0          10  2021     19              1       12.690997\n",
+       "1          12  2021     19              9       13.056627\n",
+       "2           0  2021     19             12       10.862848\n",
+       "3           9  2021     19             11       12.508183\n",
+       "4           4  2021     19              4       11.594108\n",
+       "5          11  2021     19             19       12.873812\n",
+       "6           1  2021     19              3       11.045663\n",
+       "7           3  2021     19              6       11.411293\n",
+       "8           2  2021     19              2       11.228478\n",
+       "9           8  2021     19              8       12.325368\n",
+       "10         13  2021     19             14       13.239442\n",
+       "11         14  2021     19             20       13.422257\n",
+       "12          7  2021     19              7       12.142553\n",
+       "13          6  2021     19              5       11.959738\n",
+       "14          5  2021     19             10       11.776923\n",
+       "15         17  2021     19             13       13.970702\n",
+       "16         16  2021     19             16       13.787887\n",
+       "17         15  2021     19             15       13.605072\n",
+       "18         18  2021     19             18       14.153517\n",
+       "19         19  2021     19             17       14.336331"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
