Add timeseries cross validation

--- a/notebooks/03-feature-processing.ipynb
+++ b/notebooks/03-feature-processing.ipynb
@@ -89,9 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(['driverRef','resultId','raceId','rank','constructorId','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n",
+    "df = df.drop(['driverRef','resultId','raceId','rank','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n",
     "'laps','nationality','time_x','milliseconds','fastestLapSpeed','fastestLapTime','fastestLap','statusId'\n",
-    ",'circuitName','date','dateOfDebut','status','driverStandingsId'], 1)"
+    ",'circuitName','dateOfDebut','status','driverStandingsId'], 1)"
    ]
   },
   {
@@ -197,15 +197,15 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>driverId</th>\n",
+       "      <th>constructorId</th>\n",
        "      <th>gridStart</th>\n",
        "      <th>positionOrder</th>\n",
        "      <th>year</th>\n",
        "      <th>round</th>\n",
        "      <th>circuitId</th>\n",
+       "      <th>date</th>\n",
        "      <th>ageAtRace</th>\n",
        "      <th>ageAtDebut</th>\n",
-       "      <th>yearsExperience</th>\n",
-       "      <th>racingAtHome</th>\n",
        "      <th>...</th>\n",
        "      <th>constructorStandingsWins</th>\n",
        "      <th>previousRaceGridStart</th>\n",
@@ -223,15 +223,15 @@
        "    <tr>\n",
        "      <th>21179</th>\n",
        "      <td>529</td>\n",
+       "      <td>113</td>\n",
        "      <td>9</td>\n",
        "      <td>5</td>\n",
        "      <td>1950</td>\n",
        "      <td>3</td>\n",
        "      <td>19</td>\n",
+       "      <td>1950-05-30</td>\n",
        "      <td>33</td>\n",
        "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8.0</td>\n",
@@ -247,15 +247,15 @@
        "    <tr>\n",
        "      <th>21180</th>\n",
        "      <td>529</td>\n",
+       "      <td>113</td>\n",
        "      <td>9</td>\n",
        "      <td>5</td>\n",
        "      <td>1950</td>\n",
        "      <td>3</td>\n",
        "      <td>19</td>\n",
+       "      <td>1950-05-30</td>\n",
        "      <td>33</td>\n",
        "      <td>33</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8.0</td>\n",
@@ -271,15 +271,15 @@
        "    <tr>\n",
        "      <th>22445</th>\n",
        "      <td>697</td>\n",
+       "      <td>163</td>\n",
        "      <td>23</td>\n",
        "      <td>27</td>\n",
        "      <td>1950</td>\n",
        "      <td>7</td>\n",
        "      <td>14</td>\n",
+       "      <td>1950-09-03</td>\n",
        "      <td>47</td>\n",
        "      <td>47</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>10.0</td>\n",
@@ -295,15 +295,15 @@
        "    <tr>\n",
        "      <th>21988</th>\n",
        "      <td>633</td>\n",
+       "      <td>132</td>\n",
        "      <td>5</td>\n",
        "      <td>20</td>\n",
        "      <td>1954</td>\n",
        "      <td>9</td>\n",
        "      <td>67</td>\n",
+       "      <td>1954-10-24</td>\n",
        "      <td>45</td>\n",
        "      <td>41</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>6.0</td>\n",
@@ -319,15 +319,15 @@
        "    <tr>\n",
        "      <th>22146</th>\n",
        "      <td>647</td>\n",
+       "      <td>132</td>\n",
        "      <td>1</td>\n",
        "      <td>19</td>\n",
        "      <td>1954</td>\n",
        "      <td>9</td>\n",
        "      <td>67</td>\n",
+       "      <td>1954-10-24</td>\n",
        "      <td>36</td>\n",
        "      <td>31</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
@@ -343,15 +343,15 @@
        "    <tr>\n",
        "      <th>20242</th>\n",
        "      <td>427</td>\n",
+       "      <td>130</td>\n",
        "      <td>18</td>\n",
        "      <td>17</td>\n",
        "      <td>1956</td>\n",
        "      <td>5</td>\n",
        "      <td>55</td>\n",
+       "      <td>1956-07-01</td>\n",
        "      <td>38</td>\n",
        "      <td>32</td>\n",
-       "      <td>6</td>\n",
-       "      <td>True</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.0</td>\n",
@@ -366,25 +366,25 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6 rows × 26 columns</p>\n",
+       "<p>6 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       driverId  gridStart  positionOrder  year  round  circuitId  ageAtRace  \\\n",
-       "21179       529          9              5  1950      3         19         33   \n",
-       "21180       529          9              5  1950      3         19         33   \n",
-       "22445       697         23             27  1950      7         14         47   \n",
-       "21988       633          5             20  1954      9         67         45   \n",
-       "22146       647          1             19  1954      9         67         36   \n",
-       "20242       427         18             17  1956      5         55         38   \n",
+       "       driverId  constructorId  gridStart  positionOrder  year  round  \\\n",
+       "21179       529            113          9              5  1950      3   \n",
+       "21180       529            113          9              5  1950      3   \n",
+       "22445       697            163         23             27  1950      7   \n",
+       "21988       633            132          5             20  1954      9   \n",
+       "22146       647            132          1             19  1954      9   \n",
+       "20242       427            130         18             17  1956      5   \n",
        "\n",
-       "       ageAtDebut  yearsExperience  racingAtHome  ...  \\\n",
-       "21179          33                0         False  ...   \n",
-       "21180          33                0         False  ...   \n",
-       "22445          47                0          True  ...   \n",
-       "21988          41                4         False  ...   \n",
-       "22146          31                4         False  ...   \n",
-       "20242          32                6          True  ...   \n",
+       "       circuitId        date  ageAtRace  ageAtDebut  ...  \\\n",
+       "21179         19  1950-05-30         33          33  ...   \n",
+       "21180         19  1950-05-30         33          33  ...   \n",
+       "22445         14  1950-09-03         47          47  ...   \n",
+       "21988         67  1954-10-24         45          41  ...   \n",
+       "22146         67  1954-10-24         36          31  ...   \n",
+       "20242         55  1956-07-01         38          32  ...   \n",
        "\n",
        "       constructorStandingsWins  previousRaceGridStart  previousRacePosition  \\\n",
        "21179                       NaN                    8.0                  31.0   \n",
@@ -394,13 +394,13 @@
        "22146                       NaN                    2.0                  12.0   \n",
        "20242                       NaN                    7.0                  10.0   \n",
        "\n",
-       "      racesWon  racesRetired  racesFinished  polePositions  \\\n",
-       "21179      0.0           0.0            0.0            0.0   \n",
-       "21180      0.0           0.0            0.0            0.0   \n",
-       "22445      0.0           1.0            0.0            0.0   \n",
-       "21988      0.0           9.0            6.0            1.0   \n",
-       "22146     13.0          11.0           17.0           13.0   \n",
-       "20242      1.0          21.0            4.0            1.0   \n",
+       "       racesWon  racesRetired racesFinished  polePositions  \\\n",
+       "21179       0.0           0.0           0.0            0.0   \n",
+       "21180       0.0           0.0           0.0            0.0   \n",
+       "22445       0.0           1.0           0.0            0.0   \n",
+       "21988       0.0           9.0           6.0            1.0   \n",
+       "22146      13.0          11.0          17.0           13.0   \n",
+       "20242       1.0          21.0           4.0            1.0   \n",
        "\n",
        "       racesWonByConstructor  racesRetiredByConstructor  percentageOfBestQuali  \n",
        "21179                    0.0                        0.0                  100.0  \n",
@@ -410,7 +410,7 @@
        "22146                    0.0                        0.0                  100.0  \n",
        "20242                    0.0                        0.0                  100.0  \n",
        "\n",
-       "[6 rows x 26 columns]"
+       "[6 rows x 28 columns]"
       ]
      },
      "execution_count": 10,
@@ -474,37 +474,39 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 25593 entries, 21554 to 25571\n",
-      "Data columns (total 26 columns):\n",
+      "Data columns (total 28 columns):\n",
       " #   Column                        Non-Null Count  Dtype  \n",
       "---  ------                        --------------  -----  \n",
       " 0   driverId                      25593 non-null  int64  \n",
-      " 1   gridStart                     25593 non-null  int64  \n",
-      " 2   positionOrder                 25593 non-null  int64  \n",
-      " 3   year                          25593 non-null  int64  \n",
-      " 4   round                         25593 non-null  int64  \n",
-      " 5   circuitId                     25593 non-null  int64  \n",
-      " 6   ageAtRace                     25593 non-null  int64  \n",
-      " 7   ageAtDebut                    25593 non-null  int64  \n",
-      " 8   yearsExperience               25593 non-null  int64  \n",
-      " 9   racingAtHome                  25593 non-null  bool   \n",
-      " 10  driverStandingsPoints         25593 non-null  float64\n",
-      " 11  driverStandingsPosition       25593 non-null  float64\n",
-      " 12  driverStandingsWins           25593 non-null  float64\n",
-      " 13  lastRaceRank                  25593 non-null  int64  \n",
-      " 14  constructorStandingsPoints    25587 non-null  float64\n",
-      " 15  constructorStandingsPosition  25587 non-null  float64\n",
-      " 16  constructorStandingsWins      25587 non-null  float64\n",
-      " 17  previousRaceGridStart         25593 non-null  float64\n",
-      " 18  previousRacePosition          25593 non-null  float64\n",
-      " 19  racesWon                      25593 non-null  float64\n",
-      " 20  racesRetired                  25593 non-null  float64\n",
-      " 21  racesFinished                 25593 non-null  float64\n",
-      " 22  polePositions                 25593 non-null  float64\n",
-      " 23  racesWonByConstructor         25593 non-null  float64\n",
-      " 24  racesRetiredByConstructor     25593 non-null  float64\n",
-      " 25  percentageOfBestQuali         25593 non-null  float64\n",
-      "dtypes: bool(1), float64(15), int64(10)\n",
-      "memory usage: 5.1 MB\n"
+      " 1   constructorId                 25593 non-null  int64  \n",
+      " 2   gridStart                     25593 non-null  int64  \n",
+      " 3   positionOrder                 25593 non-null  int64  \n",
+      " 4   year                          25593 non-null  int64  \n",
+      " 5   round                         25593 non-null  int64  \n",
+      " 6   circuitId                     25593 non-null  int64  \n",
+      " 7   date                          25593 non-null  object \n",
+      " 8   ageAtRace                     25593 non-null  int64  \n",
+      " 9   ageAtDebut                    25593 non-null  int64  \n",
+      " 10  yearsExperience               25593 non-null  int64  \n",
+      " 11  racingAtHome                  25593 non-null  bool   \n",
+      " 12  driverStandingsPoints         25593 non-null  float64\n",
+      " 13  driverStandingsPosition       25593 non-null  float64\n",
+      " 14  driverStandingsWins           25593 non-null  float64\n",
+      " 15  lastRaceRank                  25593 non-null  int64  \n",
+      " 16  constructorStandingsPoints    25587 non-null  float64\n",
+      " 17  constructorStandingsPosition  25587 non-null  float64\n",
+      " 18  constructorStandingsWins      25587 non-null  float64\n",
+      " 19  previousRaceGridStart         25593 non-null  float64\n",
+      " 20  previousRacePosition          25593 non-null  float64\n",
+      " 21  racesWon                      25593 non-null  float64\n",
+      " 22  racesRetired                  25593 non-null  float64\n",
+      " 23  racesFinished                 25593 non-null  float64\n",
+      " 24  polePositions                 25593 non-null  float64\n",
+      " 25  racesWonByConstructor         25593 non-null  float64\n",
+      " 26  racesRetiredByConstructor     25593 non-null  float64\n",
+      " 27  percentageOfBestQuali         25593 non-null  float64\n",
+      "dtypes: bool(1), float64(15), int64(11), object(1)\n",
+      "memory usage: 5.5+ MB\n"
      ]
     }
    ],
