Add random forest

--- a/notebooks/03-feature-processing.ipynb
+++ b/notebooks/03-feature-processing.ipynb
@@ -467,6 +467,15 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['racingAtHome'] = df[\"racingAtHome\"].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -488,7 +497,7 @@
       " 8   ageAtRace                     25593 non-null  int64  \n",
       " 9   ageAtDebut                    25593 non-null  int64  \n",
       " 10  yearsExperience               25593 non-null  int64  \n",
-      " 11  racingAtHome                  25593 non-null  bool   \n",
+      " 11  racingAtHome                  25593 non-null  int64  \n",
       " 12  driverStandingsPoints         25593 non-null  float64\n",
       " 13  driverStandingsPosition       25593 non-null  float64\n",
       " 14  driverStandingsWins           25593 non-null  float64\n",
@@ -505,8 +514,8 @@
       " 25  racesWonByConstructor         25593 non-null  float64\n",
       " 26  racesRetiredByConstructor     25593 non-null  float64\n",
       " 27  percentageOfBestQuali         25593 non-null  float64\n",
-      "dtypes: bool(1), float64(15), int64(11), object(1)\n",
-      "memory usage: 5.5+ MB\n"
+      "dtypes: float64(15), int64(12), object(1)\n",
+      "memory usage: 5.7+ MB\n"
      ]
     }
    ],
@@ -516,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
