Add results for ridgeg regression

--- a/notebooks/04-baseline-models.ipynb
+++ b/notebooks/04-baseline-models.ipynb
@@ -985,6 +985,15 @@
    "source": [
     "df_every_round_results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_every_round_results.to_csv('../data/processed/0.4-test_results.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
