Add new final models notebook

--- a/notebooks/02-data-vizualization.ipynb
+++ b/notebooks/02-data-vizualization.ipynb
@@ -137,9 +137,9 @@
     }
    ],
    "source": [
-    "current_drivers = df.loc[df['year'] == 2021].driverRef.drop_duplicates()\n",
-    "driver_positions_count = df.loc[df['driverRef'].isin(current_drivers) & (df['year'] == 2021)].sort_values(by=['constructor_name'])\n",
-    "boxplot = driver_positions_count.boxplot(by='driverRef', column=['positionOrder'], rot=90, figsize=(15,8), grid=False, patch_artist = True)"
+    "# current_drivers = df.loc[df['year'] == 2021].driverRef.drop_duplicates()\n",
+    "# driver_positions_count = df.loc[df['driverRef'].isin(current_drivers) & (df['year'] == 2021)].sort_values(by=['constructor_name'])\n",
+    "# boxplot = driver_positions_count.boxplot(by='driverRef', column=['positionOrder'], rot=90, figsize=(15,8), grid=False, patch_artist = True)"
    ]
   },
   {
