--- a/notebooks/01-feature-extraction.ipynb
+++ b/notebooks/01-feature-extraction.ipynb
@@ -762,7 +762,7 @@
     "quali_aux_best = quali_aux.groupby(['raceId'], as_index=False)['bestLap'].min()\n",
     "df = df.merge(quali_aux, on = ['raceId','driverId'], how = 'left')\n",
     "df = df.merge(quali_aux_best, on = ['raceId'], how = 'left')\n",
-    "df['percentageOfBestQuali'] = (df['bestLap_x'] / df['bestLap_y'])*100\n",
+    "df['percentageOfBestQuali'] = round(((df['bestLap_x'] / df['bestLap_y'])*100),1)\n",
     "df = df.drop(columns=['bestLap_x', 'bestLap_y'])"
    ]
   },
