--- a/notebooks/04-baseline-models.ipynb
+++ b/notebooks/04-baseline-models.ipynb
@@ -393,12 +393,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def my_custom_loss_func(y_true, y_pred):\n",
-    "    y_rank = pd.DataFrame(y_pred).rank()\n",
+    "    y_rank = pd.DataFrame(y_pred)\n",
     "    return mean_squared_error(y_true=y_true, y_pred=y_rank)\n",
     "    \n",
     "scorer = make_scorer(my_custom_loss_func, greater_is_better=False)"
