Update model and update plot results

--- a/notebooks/03-feature-processing.ipynb
+++ b/notebooks/03-feature-processing.ipynb
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_39580/1960919825.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_12777/4097412004.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
       "  df = df.drop(['resultId','raceId','rank','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n"
      ]
     }
@@ -110,7 +110,7 @@
    "source": [
     "df = df.drop(['resultId','raceId','rank','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n",
     "'laps','nationality','time_x','milliseconds','fastestLapSpeed','fastestLapTime','fastestLap','statusId'\n",
-    ",'circuitName','dateOfDebut','status','driverStandingsId'], 1)"
+    ",'circuitName','dateOfDebut','status','driverStandingsId','driverStandingsPoints','constructorStandingsPoints'], 1)"
    ]
   },
   {
@@ -130,7 +130,7 @@
      "output_type": "stream",
      "text": [
       "Columns with null values:\n",
-      " ['lastRaceRank', 'constructorStandingsPoints', 'constructorStandingsPosition', 'constructorStandingsWins', 'previousRaceGridStart', 'previousRacePosition', 'racesWon', 'racesRetired', 'racesFinished', 'polePositions', 'racesWonByConstructor', 'racesRetiredByConstructor', 'percentageOfBestQuali']\n"
+      " ['lastRaceRank', 'constructorStandingsPosition', 'constructorStandingsWins', 'previousRaceGridStart', 'previousRacePosition', 'racesWon', 'racesRetired', 'racesFinished', 'polePositions', 'racesWonByConstructor', 'racesRetiredByConstructor', 'percentageOfBestQuali']\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
      "output_type": "stream",
      "text": [
       "Columns with null values:\n",
-      " ['constructorStandingsPoints', 'constructorStandingsPosition', 'constructorStandingsWins']\n"
+      " ['constructorStandingsPosition', 'constructorStandingsWins']\n"
      ]
     },
     {
@@ -385,7 +385,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6 rows × 30 columns</p>\n",
+       "<p>6 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -413,13 +413,13 @@
        "22146                  12.0      13.0          11.0           22.0   \n",
        "20242                  10.0       1.0          21.0           16.0   \n",
        "\n",
-       "       polePositions racesWonByConstructor  racesRetiredByConstructor  \\\n",
-       "21179            0.0                   0.0                        0.0   \n",
-       "21180            0.0                   0.0                        0.0   \n",
-       "22445            0.0                   0.0                        0.0   \n",
-       "21988            1.0                   0.0                        0.0   \n",
-       "22146           13.0                   0.0                        0.0   \n",
-       "20242            1.0                   0.0                        0.0   \n",
+       "      polePositions  racesWonByConstructor  racesRetiredByConstructor  \\\n",
+       "21179           0.0                    0.0                        0.0   \n",
+       "21180           0.0                    0.0                        0.0   \n",
+       "22445           0.0                    0.0                        0.0   \n",
+       "21988           1.0                    0.0                        0.0   \n",
+       "22146          13.0                    0.0                        0.0   \n",
+       "20242           1.0                    0.0                        0.0   \n",
        "\n",
        "       percentageOfBestQuali  finished  \n",
        "21179                  100.0      True  \n",
@@ -429,7 +429,7 @@
        "22146                  100.0     False  \n",
        "20242                  100.0     False  \n",
        "\n",
-       "[6 rows x 30 columns]"
+       "[6 rows x 28 columns]"
       ]
      },
      "execution_count": 11,
@@ -502,7 +502,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 25593 entries, 21554 to 25571\n",
-      "Data columns (total 30 columns):\n",
+      "Data columns (total 28 columns):\n",
       " #   Column                        Non-Null Count  Dtype  \n",
       "---  ------                        --------------  -----  \n",
       " 0   driverId                      25593 non-null  int64  \n",
@@ -518,25 +518,23 @@
       " 10  ageAtDebut                    25593 non-null  int64  \n",
       " 11  yearsExperience               25593 non-null  int64  \n",
       " 12  racingAtHome                  25593 non-null  int64  \n",
-      " 13  driverStandingsPoints         25593 non-null  float64\n",
-      " 14  driverStandingsPosition       25593 non-null  float64\n",
-      " 15  driverStandingsWins           25593 non-null  float64\n",
-      " 16  lastRaceRank                  25593 non-null  int64  \n",
-      " 17  constructorStandingsPoints    25587 non-null  float64\n",
-      " 18  constructorStandingsPosition  25587 non-null  float64\n",
-      " 19  constructorStandingsWins      25587 non-null  float64\n",
-      " 20  previousRaceGridStart         25593 non-null  float64\n",
-      " 21  previousRacePosition          25593 non-null  float64\n",
-      " 22  racesWon                      25593 non-null  float64\n",
-      " 23  racesRetired                  25593 non-null  float64\n",
-      " 24  racesFinished                 25593 non-null  float64\n",
-      " 25  polePositions                 25593 non-null  float64\n",
-      " 26  racesWonByConstructor         25593 non-null  float64\n",
-      " 27  racesRetiredByConstructor     25593 non-null  float64\n",
-      " 28  percentageOfBestQuali         25593 non-null  float64\n",
-      " 29  finished                      25593 non-null  bool   \n",
-      "dtypes: bool(1), float64(15), int64(12), object(2)\n",
-      "memory usage: 5.9+ MB\n"
+      " 13  driverStandingsPosition       25593 non-null  float64\n",
+      " 14  driverStandingsWins           25593 non-null  float64\n",
+      " 15  lastRaceRank                  25593 non-null  int64  \n",
+      " 16  constructorStandingsPosition  25587 non-null  float64\n",
+      " 17  constructorStandingsWins      25587 non-null  float64\n",
+      " 18  previousRaceGridStart         25593 non-null  float64\n",
+      " 19  previousRacePosition          25593 non-null  float64\n",
+      " 20  racesWon                      25593 non-null  float64\n",
+      " 21  racesRetired                  25593 non-null  float64\n",
+      " 22  racesFinished                 25593 non-null  float64\n",
+      " 23  polePositions                 25593 non-null  float64\n",
+      " 24  racesWonByConstructor         25593 non-null  float64\n",
+      " 25  racesRetiredByConstructor     25593 non-null  float64\n",
+      " 26  percentageOfBestQuali         25593 non-null  float64\n",
+      " 27  finished                      25593 non-null  bool   \n",
+      "dtypes: bool(1), float64(13), int64(12), object(2)\n",
+      "memory usage: 5.5+ MB\n"
      ]
     }
    ],
@@ -559,8 +557,8 @@
    "source": [
     "new_row = {'driverId':853, 'constructorId':210, 'gridStart':20, 'positionOrder':20, 'driverRef': 'mazepin',\n",
     " 'year':2021, 'round':22, 'circuitId':77, 'date':'2021-12-12', 'ageAtRace':22, 'ageAtDebut':22,\n",
-    "  'yearsExperience':0, 'racingAtHome':0, 'driverStandingsPoints':0, 'driverStandingsPosition':19,\n",
-    "  'driverStandingsWins':0, 'lastRaceRank':19, 'constructorStandingsPoints':0, 'constructorStandingsPosition':10,\n",
+    "  'yearsExperience':0, 'racingAtHome':0, 'driverStandingsPosition':20,\n",
+    "  'driverStandingsWins':0, 'lastRaceRank':19, 'constructorStandingsPosition':10,\n",
     "  'constructorStandingsWins':0, 'previousRaceGridStart':19, 'previousRacePosition': 18, 'racesWon':0,\n",
     "  'racesRetired':4, 'racesFinished': 17, 'polePositions': 0, 'racesWonByConstructor': 0, 'racesRetiredByConstructor': 46,\n",
     "  'percentageOfBestQuali': 115, 'finished':True}\n",
@@ -767,18 +765,18 @@
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>17.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>46.0</td>\n",
        "      <td>115.000000</td>\n",
        "      <td>True</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>0.235294</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -801,7 +799,7 @@
        "25590           5.0           33.0            0.0                  114.0   \n",
        "25591           3.0           17.0            0.0                    1.0   \n",
        "25592           3.0           18.0            0.0                    0.0   \n",
-       "25593           4.0            2.0            0.0                    0.0   \n",
+       "25593           4.0           17.0            0.0                    0.0   \n",
        "\n",
        "       racesRetiredByConstructor  percentageOfBestQuali  finished  \\\n",
        "25589                      399.0             102.818205     False   \n",
@@ -815,9 +813,9 @@
        "25590        0.151515                4.0  \n",
        "25591        0.176471               -6.0  \n",
        "25592        0.166667               -1.0  \n",
-       "25593        2.000000                1.0  \n",
+       "25593        0.235294                1.0  \n",
        "\n",
-       "[5 rows x 30 columns]"
+       "[5 rows x 28 columns]"
       ]
      },
      "execution_count": 21,
